# forge

./: .gitignore  example.py  pyproject.toml
docs/: install-flow.md  smoke_test.md  tech-debt.md
docs/adr/: 0001-builtin-vault-for-install-machinery.md  0002-snippet-resolution-order.md  0003-vault-distribution-via-github-repos.md
docs/specs/: builtin-vault-contract.md  constitution.md  registry-index.md  vault-manifest.md
forge/: config.py
forge/api/: server.py
forge/builtins/: loader.py
forge/core/: executor.py  graph_resolver.py  llm.py  llm_prompts.py  manifest.py  registry.py  serialization.py  snippet_registry.py
forge/installer/: exceptions.py  hashing.py  http.py  registry_client.py  tarball.py
forge/music/: lib.py  llm_prompt.py
forge/sdk/: __init__.py  client.py
tests/: test_builtins_loader.py  test_generate.py  test_hello_forge.py  test_resolution_order.py
tests/api/: conftest.py  test_connect.py  test_execute.py  test_freeze.py  test_generate.py  test_sync_dependencies.py  test_vec3.py
tests/core/: test_data_snippets.py  test_dependencies.py  test_executor.py  test_freeze_semantics.py  test_llm_prompts.py  test_registry.py  test_serialization.py  test_snapshot_capture.py
tests/integration/: conftest.py  test_install_e2e.py  test_install_via_api.py  test_music21_dep.py
tests/music/: test_lib.py
tests/test_builtin_snippets/: conftest.py  test_install_orchestrator.py  test_manifest_add_dep.py  test_registry_fetch.py  test_registry_lookup.py  test_registry_refresh.py  test_vault_extract.py
tests/test_installer/: conftest.py  (+6 more)
(+17 files in other folders)
