[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "forge-arch"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "requests",
  "pyyaml"
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]
