[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "forge-arch"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "requests",
  "pyyaml",
  "anthropic",
  "python-dotenv",
  "numpy",
  "tomli; python_version < '3.11'",
  "tomli_w",
  "packaging"
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "responses"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]
